@@ -30,6 +30,7 @@
   26 Nov 07 GKY Added "Save as" to internal editor
   12 Jan 08 SHL Rework Config menu
   16 Jan 08 SHL Add sync updates toggle
+  19 Jan 08 GKY Rework Utilities menu
 
 ***********************************************************************/
 
